--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Sandbox.Sandbox
 EditorStartupMap=/Game/Maps/Sandbox.Sandbox
+GlobalDefaultGameMode=/Game/Blueprints/BP_ScoringGameMode.BP_ScoringGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
