Adding score sfx

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Sandbox.Sandbox
-EditorStartupMap=/Game/Maps/Sandbox.Sandbox
+GameDefaultMap=/Game/Maps/MainMap.MainMap
+EditorStartupMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_ScoringGameMode.BP_ScoringGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
